# blfs_mr

./: CMakeLists.txt  README.md  alloc_shared_files.sh  distr_input.sh  gen_wordcount_input.sh  init_prealloc_files.sh  init_workers.sh  mnt_targets.sh  mr_wordcount.c  print_output.sh  rm_isplits.sh  rm_outputs.sh  run_mapred.sh  run_worker.sh  set_env.sh  sharedfiles  start_workers.sh  stop_workers.sh  workers  workers_n_splits
include/: MR_msg_type.h  intermediate_file_sturct.h  job.h  master.h  master_fwd.h  shared_file_struct.h  task.h  worker.h  worker_context_fwd.h
include/mrwsi/: mapreduce.h
src/: job.c  mapreduce.c  master.c  task.c  worker.c
